feat: use newer llama module

--- a/values/text-generation-inference.yaml
+++ b/values/text-generation-inference.yaml
@@ -1,5 +1,7 @@
 fullnameOverride: text-generation-inference
 
+model: meta-llama/Meta-Llama-3.1-8B-Instruct
+
 deployment:
   resources:
     limits:
