--- a/values/text-generation-inference.yaml
+++ b/values/text-generation-inference.yaml
@@ -1,6 +1,6 @@
-model: meta-llama/Meta-Llama-3.1-8B-Instruct
+tgi:
+  model: meta-llama/Meta-Llama-3.1-8B-Instruct
 
-deployment:
   resources:
     limits:
       nvidia.com/gpu: 1
