feat: add hostname without cluster name

--- a/values/chat-ui.yaml
+++ b/values/chat-ui.yaml
@@ -13,6 +13,9 @@ chatui:
     enabled: true
     tls: true
     hostname: "chat-ui.llm-models-sks.is-ai.camptocamp.com"
+    extraHosts:
+    - name: "chat-ui.is-ai.camptocamp.com"
+      path: "/"
     annotations:
       "cert-manager.io/cluster-issuer": "letsencrypt-prod"
       "traefik.ingress.kubernetes.io/router.entrypoints": "websecure"
