test: remove extraHosts

--- a/values/chat-ui.yaml
+++ b/values/chat-ui.yaml
@@ -13,8 +13,8 @@ chatui:
     enabled: true
     tls: true
     hostname: "chat-ui.llm-models-sks.is-ai.camptocamp.com"
-    extraHosts:
-    - name: "chat-ui.is-ai.camptocamp.com"
+    # extraHosts:
+    # - name: "chat-ui.is-ai.camptocamp.com"
     annotations:
       "cert-manager.io/cluster-issuer": "letsencrypt-prod"
       "traefik.ingress.kubernetes.io/router.entrypoints": "websecure"
