feat: enable OIDC dor ChatUI

--- a/values/chat-ui.yaml
+++ b/values/chat-ui.yaml
@@ -20,4 +20,7 @@ chatui:
       "traefik.ingress.kubernetes.io/router.entrypoints": "websecure"
       "traefik.ingress.kubernetes.io/router.tls": "true"
 
+  oidc:
+    secretName: chatui-oidc
+
   # models: >
