test: use another prompt template

--- a/values/chat-ui.yaml
+++ b/values/chat-ui.yaml
@@ -34,15 +34,7 @@ chatui:
         "description": "Meta's Llama is an accessible, open large language model (LLM) designed for developers, researchers, and businesses to build, experiment, and responsibly scale their generative AI ideas.",
         "websiteUrl": "https://github.com/meta-llama/llama-models/blob/main/models/llama3_1/MODEL_CARD.md",
         "preprompt": "",
-        "chatPromptTemplate" : "<s>{{#each messages}}{{#ifUser}}[INST] {{#if @first}}{{#if @root.preprompt}}{{@root.preprompt}}\n{
-
-    {/if}
-
-    }{
-
-    {/if}
-
-    }{{content}} [/INST]{{/ifUser}}{{#ifAssistant}}{{content}}</s>{{/ifAssistant}}{{/each}}",
+        "chatPromptTemplate" : "{{#each messages}}{{#ifUser}}User: {{content}}{{/ifUser}}<end_of_utterance>\nAssistant: {{#ifAssistant}}{{content}}\n{{/ifAssistant}}{{/each}}",
         "parameters": {
           "temperature": 0.3,
           "top_p": 0.95,
