feat: enable metrics

--- a/values/text-generation-inference.yaml
+++ b/values/text-generation-inference.yaml
@@ -23,3 +23,8 @@ tgi:
             operator: In
             values:
             - llm
+
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
