--- a/values/chat-ui.yaml
+++ b/values/chat-ui.yaml
@@ -73,6 +73,7 @@ chatui:
         "displayName": "mistralai/Mistral-7B-Instruct-v0.1",
         "description": "Mistral 7B is a new Apache 2.0 model, released by Mistral AI that outperforms Llama2 13B in benchmarks.",
         "websiteUrl": "https://mistral.ai/news/announcing-mistral-7b/",
+        "logoUrl": "https://huggingface.co/datasets/huggingchat/models-logo/resolve/main/mistral-logo.png",
         "preprompt": "",
         "chatPromptTemplate" : "<s>{{#each messages}}{{#ifUser}}[INST] {{#if @first}}{{#if @root.preprompt}}{{@root.preprompt}}\n{{/if}}{{/if}}{{content}} [/INST]{{/ifUser}}{{#ifAssistant}}{{content}}</s>{{/ifAssistant}}{{/each}}",
         "parameters": {
