--- a/values/chat-ui.yaml
+++ b/values/chat-ui.yaml
@@ -20,6 +20,12 @@ chatui:
       "traefik.ingress.kubernetes.io/router.entrypoints": "websecure"
       "traefik.ingress.kubernetes.io/router.tls": "true"
 
+  extraEnv:
+  # Enable web search through Google, but without any authentication, so we may hit rate limits if a lot of users are 
+  # using the service.
+  - name: USE_LOCAL_WEBSEARCH
+    value: "true"
+
   # oidc:
   #   secretName: chatui-oidc
 
@@ -40,7 +46,7 @@ chatui:
           "tokenizerUrl": "https://huggingface.co/nsarrazin/llama3.1-tokenizer/resolve/main/tokenizer.json",
           "tokenizerConfigUrl": "https://huggingface.co/nsarrazin/llama3.1-tokenizer/raw/main/tokenizer_config.json"
         },
-        "tools": false,
+        "tools": true,
         "preprompt": "",
         "parameters": {
           "temperature": 0.6,
